@@ -15,6 +15,8 @@
  - (tim) [regress/portnum.sh] Shell portability fix.
  - (tim) [configure.ac] Define BROKEN_GETADDRINFO on SVR5 systems. The native
    getaddrinfo() is too old and limited for addr_pton() in addrmatch.c.
+ - (tim) [roaming_client.c] Use of <sys/queue.h> is not really portable so
+   we use "openbsd-compat/sys-queue.h"
 
 20100115
  - (dtucker) OpenBSD CVS Sync
